--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -299,6 +299,7 @@ items.forEach(({item, x, y}) => {
     $("#overlay").mouseup( function(){
         $("#overlay").fadeOut(300);
         $("#mod-cell").fadeOut(300);
+        consloe.log("test")
     })
 
 
